# ratatoskr-prototype

./: .gitignore  README.md  Sandbox.ipynb  alembic.ini  build.gradle  create_database.py  create_table_applications.py  create_table_history.py  docker-compose.yml  download_model.py  index.ts  main.py  models.py  muninn.py  package.json  populate.py  pyproject.toml  requirements.txt  settings.gradle  setup_dev.ps1  setup_dev.sh  test.py  watch.ps1
capability/: Capability.ts  ImageGenerationCapability.ts  NotionCapability.ts  QuestionCapability.ts  capability.py
clients/: OpenAiClient.ts  duck_duck_client_test.py  duckduck_client.py  notion_client.py  notion_service_client.py  notion_service_client_test.py  openai_client.py  spacy_client.py  spacy_client_test.py  test_duck_duck_client.py  test_duckduck_client.py  test_notion_service_client.py  test_spacy_client.py  transformers_client.py
config/: index.ts
docs/: ARCHITECTURE.md  DEVELOPMENT.md
filters/: code_question_filter.py  context_saving_filter.py  filter_types.py  notion_filter.py  notion_filter_test.py  question_filter.py
interfaces/: telegram_bot.py
language_model/: base_model.py  gpt2_model.py  gpt3_model.py  gpt_chat_model.py  language_model.py  named_transformers_model.py  test_gpt2_model.py
log_factory/: logger.py
message_handler/: __init__.py  message_handler.py  message_types.py
migrations/: 2_create_table_history.py  3_create_table_applications.py  4_alter_table_history_add_app_id.py  executor.py
migrations_old/: 1_create_database.py  4_alter_table_history_add_app_id.py  README.md  (+1 more)
(+138 files in other folders)
